added meta tags

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Human_Spec</title>
   <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
@@ -22,6 +21,26 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
+  <!-- Primary Meta Tags -->
+  <title>Human_Spec</title>
+  <meta name="title" content="Human_Spec">
+  <meta name="description" content="A Full stack, comprehensive, customizable, user proficiency testing application.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://human-spec.herokuapp.com/">
+  <meta property="og:title" content="Human_Spec">
+  <meta property="og:description"
+    content="A Full stack, comprehensive, customizable, user proficiency testing application.">
+  <meta property="og:image" content="">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://human-spec.herokuapp.com/">
+  <meta property="twitter:title" content="Human_Spec">
+  <meta property="twitter:description"
+    content="A Full stack, comprehensive, customizable, user proficiency testing application.">
+  <meta property="twitter:image" content="">
 </head>
 
 <body>
